<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity" android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:text="@string/tvTitle"
        android:textSize="35sp"
        android:textColor="@android:color/holo_blue_light"/>

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textAlignment="center"
        android:text="@string/tvSubTitle"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_light"/>

    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="286dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logo" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:stretchColumns="1">

        <TableRow android:orientation="vertical">

            <EditText
                android:id="@+id/etId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etId"
                android:inputType="number" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etPrice"
                android:inputType="number" />

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnAdd" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnDelete" />

</LinearLayout>